# autolift-loyalty

./: .dockerignore  .env.production  .gitignore  Dockerfile  compose.yaml  docker-compose.prod.yml  pom.xml
.github/workflows/: build-test.yml  deploy.yml  format-check.yml
docker/dev/: docker-compose.yml
docker/prod/: docker-compose.yml
docs/: README.md  architecture.md  business-domains.md  database.md  ddd-cqrs.md  deployment-plan.md  git-workflow.md  implementation-order.md  khai-pha-du-lieu.md  references.md  sandbox-module.md  targeting-module.md  temp.md  uplift-modeling.md
ml/: .env.example  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
ml/autolift_ml/: __init__.py
ml/autolift_ml/gp/: __init__.py  build_gp_input.py  export_gp_rules.py  train_gp_rules.py
ml/autolift_ml/pipeline/: __init__.py  build_features.py  evaluate.py  export.py  train.py
ml/autolift_ml/utils/: __init__.py  data_loader.py  feature_config.py  metrics.py
ml/notebooks/: autolift_x5_materials_export_lite_chunked.ipynb
ml/scripts/: export_customers.py  run_gp_pipeline.py  run_ml_worker.py  run_pipeline.py
scripts/: clean-compile.sh  clean-migrate.sh  compile.sh  deploy.sh  deps.sh  document.sh  format.sh  kill-spring.sh  lint.sh  migrate.sh  package.sh  run.sh  test.sh
src/main/java/com/autolift/: AsyncConfig.java  AutoliftApplication.java  AutoliftLoyaltyApplication.java
src/main/resources/: application.yaml  application.yml
src/test/java/com/autolift/: AutoliftLoyaltyApplicationTests.java  TestAutoliftLoyaltyApplication.java  (+1 more)
(+412 files in other folders)
