[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolift-ml"
version = "1.0.0"
description = "Uplift Modeling Pipeline for Autolift Loyalty System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scikit-uplift>=0.5.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
autolift-pipeline = "autolift_ml.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["autolift_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]